# ctf-platform

./: .env.example  .gitignore  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/core/: auth.py  config.py  database.py  limiter.py  redis.py  security.py
backend/app/models/: __init__.py  attempt.py  challenge.py  user.py
backend/app/routers/: admin.py  auth.py  challenges.py  hints.py  scoreboard.py
backend/app/schemas/: auth.py
backend/app/services/: challenge_loader.py  excel_import.py  orchestrator.py
backend/migrations/: env.py
backend/migrations/versions/: 1f9383fe8269_create_users_table.py  4ed23e1d9775_create_challenges_and_attempts_tables.py
challenges/api-mass-assignment-01/: challenge.yml  solve.py  writeup.md
challenges/api-mass-assignment-01/app/: app.py
challenges/forense-pcap-01/: challenge.yml  solve.py  writeup.md
challenges/forense-pcap-01/files/: captura.pcap  readme.txt
challenges/web-idor-01/: challenge.yml  solve.py
challenges/web-idor-01/app/: app.py
challenges/web-jwt-01/: Dockerfile  challenge.yml  solve.py
challenges/web-jwt-01/app/: app.py
challenges/web-sqli-01/: Dockerfile  challenge.yml  solve.py
challenges/web-sqli-01/app/: app.py
challenges/web-ssrf-01/: Dockerfile  challenge.yml  solve.py  writeup.md
challenges/web-traversal-01/: challenge.yml  solve.py
challenges/web-xss-01/: Dockerfile  challenge.yml  solve.py  writeup.md
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
(+19 files in other folders)
